Fix iframe transparency when browser is in dark mode (#106).

--- a/ChromeExt/src/contentscript/contentscript.scss
+++ b/ChromeExt/src/contentscript/contentscript.scss
@@ -10,6 +10,7 @@ div#n3q {
 }
 
 div#n3q-display {
+    color-scheme: light;
     position: fixed;
     top: 0;
     bottom: 0;
